# DecentralizedAiAmrketplace

./: .env  README.md  canister_ids.json  dfx.json  package.json  pnpm-lock.yaml
.dfx/ic/canisters/backend/: backend.old.most  backend.wasm  constructor.old.did  service.did.d.ts
.dfx/ic/lsp/: skndj-viaaa-aaaah-qp5oq-cai.did
.dfx/local/canisters/backend/: backend.most  constructor.did  service.did.js
.dfx/local/canisters/backend2/: backend2.did  index.js
agent/router/: package-lock.json  package.json  router.js
agent/router/utils/: backend.did.js  createActor.js
agent/utils/: admin.js  package-lock.json  package.json  utils.js
app/: .env  juno.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
app/src/: App.tsx
app/src/api/: clientApi.ts  contractApi.ts
app/src/api/dataSource/: ClientApiDataSource.ts  ContractApiDataSource.ts  LogicApiDataSource.ts
app/src/components/: Navbar.tsx
app/src/components/agents/: AgentList.tsx
app/src/components/proposal/: Actions.tsx
app/src/components/proposals/: ActionsDropdown.tsx  ChangeApprovalsNeededForm.tsx  CreateProposalPopup.tsx  CrossContractCallForm.tsx  MaxActiveProposalsForm.tsx  SetContextVariableForm.tsx  TransferForm.tsx
app/src/pages/chat/: index.tsx
app/src/utils/: backend.did.d.ts  createActor.ts  polyfills.ts
aspire/src/: App.jsx  index.css  main.jsx
aspire/src/components/: Navbar.jsx
aspire/src/pages/: AgentList.jsx  Chat.jsx
aspire/src/utils/: backend.did.js  polyfills.js
backend/: main.mo
logic/: Cargo.toml
logic/src/: lib.rs
(+2 files in other folders)
